# Helium

./: .gitignore  .gitmodules  CMakeLists.txt  configure-osx.zsh  configure-win64.ps1  configure_cmake.sh  mono_crash.0.0.json  mono_crash.0.1.json  mono_crash.0.2.json  mono_crash.0.3.json  mono_crash.0.4.json  mono_crash.0.5.json  mono_crash.0.6.json  mono_crash.0.7.json  switch_to_debug.sh  switch_to_release.sh  switch_to_x64.sh  xmake.lua
Assets/: testfile.desc.yml  testfile.txt
Assets/Shaders/: primitive.frag  primitive.vert  test.frag  test.frag.desc.yml  test.vert
src/Helium/: Application.cpp  Application.h  Core.h  EnginePref.cpp  EnginePref.h  HeliumPrecompiled.cpp  HeliumPrecompiled.h  HeliumTypeRegistry.cpp  HeliumTypeRegistry.h  TimerSystem.cpp  TimerSystem.h  main.cpp
src/Helium/AssetManagement/: Asset.cpp  Asset.h  AssetDescriptor.cpp  AssetDescriptor.h  AssetType.cpp  AssetType.h  PlainTextFileAsset.cpp  PlainTextFileAsset.h  PlainTextFileAssetDescriptor.cpp  PlainTextFileAssetDescriptor.h  ShaderSourceFileAsset.cpp  ShaderSourceFileAsset.h  ShaderSourceFileAssetDescriptor.cpp  ShaderSourceFileAssetDescriptor.h
src/Helium/Core/: Handle.cpp  Handle.h  ManagedObject.cpp  ManagedObject.h  Reference.cpp  Reference.h  Singleton.cpp  Singleton.h  UnsafeHandle.h
src/Helium/CoreGame/: AbstractRenderer.cpp  AbstractRenderer.declaration.cs  AbstractRenderer.h  Actor.cpp  Actor.h  ActorComponent.cpp  ActorComponent.h  Camera.cpp  Camera.declaration.cs  Camera.h  CameraType.cpp  CameraType.declaration.cs  CameraType.h  Debug.cpp  Debug.h  PrimitiveRenderer.cpp  PrimitiveRenderer.declaration.cs  PrimitiveRenderer.h  PrimitiveType.cpp  PrimitiveType.declaration.cs  PrimitiveType.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Time.cpp  Time.h  Transform.cpp  Transform.declaration.cs  Transform.h
src/Helium/Editor/: EditorApplication.cpp  EditorApplication.h  SceneViewer.cpp  SceneViewer.h
src/Helium/ImGui/: ActorInspectorWindow.cpp  ActorInspectorWindow.h  ActorSelectedMessage.h  ImGuiWindow.cpp  ImGuiWindow.h  ObjectInspector.cpp  ObjectInspector.h  ObjectInspectorWindow.cpp  ObjectInspectorWindow.h  ObjectViewerWindow.cpp  ObjectViewerWindow.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
src/Helium/Interop/: MonoRuntime.cpp  MonoRuntime.h
src/Helium/Interop/Bindings/Helium/: Debug.cpp
src/Helium/LowLevel/: PersistentObjectAllocator.cpp  PersistentObjectAllocator.h
src/Helium/Messaging/: Messages.cpp  Messages.h
src/Helium/ObjectModel/: EnumHandle.cpp  EnumHandle.h  Handle.h  IUpdatable.h  InstanceID.cpp  InstanceID.h  ManagedEnum.cpp  ManagedEnum.h  ManagedObject.cpp  ManagedObject.h  RuntimeObjectRegistry.cpp  RuntimeObjectRegistry.h  Singleton.cpp  Singleton.h  UnsafeHandle.cpp  UnsafeHandle.h
src/Helium/Platform/GL/: GL.h  GLFrameBuffer.cpp  GLFrameBuffer.h  GLIndexBuffer.cpp  GLIndexBuffer.h  GLShaderProgram.cpp  GLShaderProgram.h  GLVertexArray.cpp  GLVertexArray.h  GLVertexBuffer.cpp  GLVertexBuffer.h  GLVirtualViewport.cpp  GLVirtualViewport.h  GLWindow.cpp  GLWindow.h
src/Helium/Reflection/: ManagedField.cpp  ManagedField.h  ManagedPropertyDescriptor.cpp  ManagedPropertyDescriptor.h  PropertyType.cpp  PropertyType.declaration.cs  PropertyType.h  TypeDescriptor.cpp  TypeDescriptor.h  TypeRegistry.cpp  TypeRegistry.h
src/Helium/Rendering/: FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  NativeWindow.cpp  NativeWindow.h  PrimitiveRendererBackend.cpp  PrimitiveRendererBackend.h  ShaderProgram.cpp  ShaderProgram.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  VirtualViewport.cpp  VirtualViewport.h
src/Helium/Serialization/: Serializer.cpp  Serializer.h
src/Helium/Utility/: CRC32.h  File.h  Hex.h  Size.h  Stopwatch.cpp  Stopwatch.h
src/Managed/HeliumManaged/: HeliumManaged.sln
src/Managed/HeliumManaged/HeliumManaged/: Actor.cs  ActorComponent.cs  Debug.cs  HeliumManaged.csproj  ManagedObject.cs  NativelyMappedAttribute.cs  TestBindingClass.cs  Transform.cs
src/Managed/HeliumManaged/HeliumManaged/src/Helium/: Actor.cs  ActorComponent.cs  Debug.cs  Object.cs  Scene.cs  TestBindingClass.cs  Time.cs  Transform.cs
tools/HeliumCodeAssist/: CMakeLists.txt
tools/HeliumCodeAssist/src/: Attributes.cs  ManagedClass.cs  ManagedEnum.cs  Program.cs
tools/HeliumCodeAssist/src/Stubs/: Primitives.cs
